--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 10px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +10,26 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+P {
+  margin: 2px 0;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+hr {
+  border: none;
+  border-top: solid 2px #aaa;
+  width: 100%;
+}
+
+.container {
+  margin: 20px 0;
+  display: flex;
+  gap: 10px;
 }
